<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>OpenEPT</class>
 <widget class="QMainWindow" name="OpenEPT">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>735</width>
    <height>507</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Open EPT - MCU Energy profiler</string>
  </property>
  <property name="windowIcon">
   <iconset resource="resource.qrc">
    <normaloff>:/images/main.png</normaloff>:/images/main.png</iconset>
  </property>
  <widget class="QWidget" name="centralwidget">
   <property name="sizePolicy">
    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QMdiArea" name="mdiArea">
      <property name="enabled">
       <bool>true</bool>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
        <pointsize>11</pointsize>
        <bold>true</bold>
       </font>
      </property>
      <property name="autoFillBackground">
       <bool>false</bool>
      </property>
      <property name="styleSheet">
       <string notr="true"/>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
      <property name="verticalScrollBarPolicy">
       <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
      <property name="sizeAdjustPolicy">
       <enum>QAbstractScrollArea::AdjustToContents</enum>
      </property>
      <property name="background">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
         <red>104</red>
         <green>104</green>
         <blue>104</blue>
        </color>
       </brush>
      </property>
      <property name="viewMode">
       <enum>QMdiArea::SubWindowView</enum>
      </property>
      <property name="documentMode">
       <bool>true</bool>
      </property>
      <property name="tabsClosable">
       <bool>true</bool>
      </property>
      <property name="tabsMovable">
       <bool>true</bool>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>735</width>
     <height>22</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Arial</family>
     <pointsize>11</pointsize>
     <bold>false</bold>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(186, 59, 10);</string>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
   </widget>
   <widget class="QMenu" name="menuDevices">
    <property name="title">
     <string>Devices</string>
    </property>
    <addaction name="actionAddSingleDevice"/>
    <addaction name="actionAddMultipleDevices"/>
    <addaction name="separator"/>
   </widget>
   <widget class="QMenu" name="menuAbout">
    <property name="title">
     <string>About</string>
    </property>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuDevices"/>
   <addaction name="menuAbout"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <widget class="QToolBar" name="toolBar">
   <property name="windowTitle">
    <string>toolBar</string>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="actionAddSingleDevice"/>
   <addaction name="actionAddMultipleDevices"/>
   <addaction name="actionDataAnalyzer"/>
  </widget>
  <action name="actionAddMultipleDevices">
   <property name="icon">
    <iconset resource="resource.qrc">
     <normaloff>:/images/NewSet/addMultiple.png</normaloff>:/images/NewSet/addMultiple.png</iconset>
   </property>
   <property name="text">
    <string>Add Multiple Devices</string>
   </property>
  </action>
  <action name="actionAddSingleDevice">
   <property name="icon">
    <iconset resource="resource.qrc">
     <normaloff>:/images/NewSet/addSingle.png</normaloff>:/images/NewSet/addSingle.png</iconset>
   </property>
   <property name="text">
    <string>Add Single Device</string>
   </property>
  </action>
  <action name="actionDataAnalyzer">
   <property name="icon">
    <iconset resource="resource.qrc">
     <normaloff>:/images/NewSet/dataAnalyzer.png</normaloff>:/images/NewSet/dataAnalyzer.png</iconset>
   </property>
   <property name="text">
    <string>DataAnalyzer</string>
   </property>
   <property name="toolTip">
    <string>Open and analyze consumption profile</string>
   </property>
  </action>
 </widget>
 <resources>
  <include location="resource.qrc"/>
 </resources>
 <connections/>
</ui>
